<resources>
    <string name="app_name">Project-CMU</string>

    <!-- Strings related to main screen -->
    <string name="title_activity_main">HopOnCMU</string>
    <string name="action_join_now">Join Now</string>

    <!-- Strings related to login -->
    <string name="logo_content_description">App Logo</string>
    <string name="title_activity_validate">CMU-Project</string>
    <string name="prompt_ticket_code">Ticket code</string>
    <string name="action_sign_in">Validate</string>
    <string name="error_invalid_ticketCode">This ticket code is too short</string>
    <string name="error_incorrect_ticketCode">This ticket code is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <!-- Strings related to sign up -->
    <string name="text_create_account">Create your account</string>
    <string name="username_input">Choose your username</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_username">Username can only contain letters</string>
    <string name="error_occupied_username">This username is already in use</string>

    <!-- String related to MainActivity drawer-->
    <string name="text_monuments">Monuments</string>
    <string name="text_ranking">Rankings</string>
    <string name="text_history">History</string>
    <string name="text_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- String related to QuizActivity -->
    <string name="text_button_A">A</string>
    <string name="text_button_B">B</string>
    <string name="text_button_C">C</string>
    <string name="text_button_D">D</string>
    <string name="text_button_previous">Previous</string>
    <string name="text_button_next">Next</string>
    <string name="text_question_example">Your question here?</string>
    <string name="text_answer_example">Your answer here.</string>

    <!-- String related to HistoryActivity -->
    <string name="marker_question_1">Question 1</string>
    <string name="marker_question_2">Question 2</string>
    <string name="marker_question_3">Question 3</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">History</string>
    <string name="tab_text_2">Ranking</string>

    <string name="port">10001</string>
</resources>
