<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_monuments"
            android:icon="@drawable/ic_menu_monuments"
            android:title="@string/text_monuments" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ic_menu_ranking"
            android:title="@string/text_ranking" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/text_history" />
    </group>

    <group android:id="@+id/group_2"
        android:checkableBehavior="single">
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/text_logout" />
    </group>

</menu>
