<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ulisboa.tecnico.cmu.activity.HistoryActivity">

    <TableLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/question1"
                android:text="@string/marker_question_1"
                android:padding="3dip" />
            <TextView
                android:id="@+id/answer1"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/question2"
                android:text="@string/marker_question_2"
                android:padding="3dip" />
            <TextView
                android:id="@+id/answer2"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/question3"
                android:text="@string/marker_question_3"
                android:padding="3dip" />
            <TextView
                android:id="@+id/answer3"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>
